objects/Astonous_SM__Shipment_Package__c.object
<CustomObject>
    <fields>
        <fullName>Astonous_SM__Dimension_Unit__c</fullName>
        <label>Dimension Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CM</fullName>
                    <label>Centimeters</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                    <label>Inches</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Height__c</fullName>
        <label>Height</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Insured_Value__c</fullName>
        <label>Insured Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Length__c</fullName>
        <label>Length</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Astonous_SM__Shipment__c</referenceTo>
        <relationshipLabel>Shipment Packages</relationshipLabel>
        <relationshipName>Shipment_Packets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Weight_Unit__c</fullName>
        <label>Weight Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>LB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Weight__c</fullName>
        <inlineHelpText>Weight of packet</inlineHelpText>
        <label>Weight</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Width__c</fullName>
        <label>Width</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Shipment Package</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>